--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: default
 <div class="hero center">
       <img src="assets/img/je.png" />
       <h2>Hi, I'm Javad Elmi</h2>
-      <h4>Welcom</h4>
+      <h4>Welcome</h4>
       <h6>
         <a href="/blog">FARSI BLOG</a> - 
-        <a href="#">GITHUB</a>
+        <a href="https://github.com/{{ site.github }}">GITHUB</a>
       </h6>
 </div>
