--- a/index.html
+++ b/index.html
@@ -1,7 +1,126 @@
 ---
 layout: default
 ---
+<style>
+    .hero {
+  text-align: center;
+  min-height: 100vh; }
+  .hero.center {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .hero img {
+    width: 200px; }
+    @media only screen and (min-device-width: 20em) and (max-device-width: 30em) {
+      .hero img {
+        width: 200px; } }
+    @media only screen and (min-width: 30.1em) {
+      .hero img {
+        width: 250px; } }
+    @media only screen and (min-width: 48em) {
+      .hero img {
+        width: 250px; } }
+    @media only screen and (min-width: 62.5em) {
+      .hero img {
+        width: 250px; } }
+    @media only screen and (min-width: 81.25em) {
+      .hero img {
+        width: 250px; } }
+  .hero h2 {
+    font-family: "courier-std";
+    font-style: italic;
+    font-weight: 400;
+    font-size: 2rem;
+    letter-spacing: -2px;
+    margin: 0; }
+    @media only screen and (min-device-width: 20em) and (max-device-width: 30em) {
+      .hero h2 {
+        font-size: 2rem; } }
+    @media only screen and (min-width: 30.1em) {
+      .hero h2 {
+        font-size: 2.5rem; } }
+    @media only screen and (min-width: 48em) {
+      .hero h2 {
+        font-size: 2.5rem; } }
+    @media only screen and (min-width: 62.5em) {
+      .hero h2 {
+        font-size: 2.5rem; } }
+    @media only screen and (min-width: 81.25em) {
+      .hero h2 {
+        font-size: 2.5rem; } }
+  .hero h4 {
+    font-family: "courier-std";
+    font-style: italic;
+    font-weight: 400;
+    font-size: 1.7rem;
+    letter-spacing: -1px;
+    margin: 0; }
+    @media only screen and (min-device-width: 20em) and (max-device-width: 30em) {
+      .hero h4 {
+        font-size: 1.7rem; } }
+    @media only screen and (min-width: 30.1em) {
+      .hero h4 {
+        font-size: 2rem; } }
+    @media only screen and (min-width: 48em) {
+      .hero h4 {
+        font-size: 2rem; } }
+    @media only screen and (min-width: 62.5em) {
+      .hero h4 {
+        font-size: 2rem; } }
+    @media only screen and (min-width: 81.25em) {
+      .hero h4 {
+        font-size: 2rem; } }
+  .hero h6 {
+    font-family: "courier-std";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1rem;
+    margin: 1rem auto; }
+    @media only screen and (min-device-width: 20em) and (max-device-width: 30em) {
+      .hero h6 {
+        font-size: 1rem; } }
+    @media only screen and (min-width: 30.1em) {
+      .hero h6 {
+        font-size: 1.2rem; } }
+    @media only screen and (min-width: 48em) {
+      .hero h6 {
+        font-size: 1.2rem; } }
+    @media only screen and (min-width: 62.5em) {
+      .hero h6 {
+        font-size: 1.2rem; } }
+    @media only screen and (min-width: 81.25em) {
+      .hero h6 {
+        font-size: 1.2rem; } }
+    .hero h6 a {
+      color: #444;
+      text-decoration: none; }
+      .hero h6 a:hover {
+        color: #0000CD; }
 
+.waves-effect.waves-side .waves-ripple {
+  /* The alpha value allows the text and background color
+   of the button to still show through. */
+  background-color: rgba(51, 51, 51, 0.35); }
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .hero {
+    height: 100vh; } }
+
+</style>
 <div class="hero center">
       <img src="assets/img/je.png" />
       <h2>Hi, I'm Javad Elmi</h2>
