--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+﻿---
 layout: default
 ---
 <style>
@@ -123,10 +123,10 @@ layout: default
 </style>
 <div class="hero center">
       <img src="assets/img/je.png" />
-      <h2>Hi, I'm Javad Elmi</h2>
-      <h4>Welcome</h4>
+      <h2>سلام</h2>
+      <h4> خوش آمدید</h4>
       <h6>
-        <a href="/blog">FARSI BLOG</a> - 
-        <a href="https://github.com/{{ site.github }}">GITHUB</a>
+        <a href="/blog">وبلاگ</a> - 
+        <a href="https://github.com/{{ site.github }}">گیت هاب</a>
       </h6>
 </div>
