--- a/biography/index.html
+++ b/biography/index.html
@@ -3,6 +3,6 @@ layout: biography
 ---
 <div style="padding:4%">
     <img src="../assets/img/je.png" style="width:100%"/>
-    <h1>javad elmi</h1>
+    <h1>Fatemeh zangouie</h1>
     <h3>Student in Computer Engineering</h3>
 </div>
