--- a/works/index.html
+++ b/works/index.html
@@ -2,19 +2,8 @@
 layout: blog
 title:وبلاگ| فاطمه زنگوئی
 ---
-{% for post in paginator.posts %}
-<article>
-  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <h4>{{ post.parsidate }}</h4>
-  <section class="content">
-    {{ post.content | truncatewords: 100 }}
-  </section>
-  <a href="{{ post.url }}" class="link">
-    <div class="more waves-effect waves-side">
-      <i class="mdi-navigation-chevron-left"></i>
-      <span>بیشتر بخوانید</span>
-    </div>
-  </a>
-</article>
-{% endfor %}
-{% include pagination.html %}
+<div style="padding:4%">
+    <img src="../assets/img/je.png" style="width:100%"/>
+    <h1>Fatemeh zangouie</h1>
+    <h3>Student in Computer Engineering</h3>
+</div>
