--- a/works/index.html
+++ b/works/index.html
@@ -2,8 +2,7 @@
 layout: blog
 title:وبلاگ| فاطمه زنگوئی
 ---
-<div style="padding:4%">
-    <img src="../assets/img/je.png" style="width:100%"/>
-    <h1>Fatemeh zangouie</h1>
-    <h3>Student in Computer Engineering</h3>
+<div style="padding:4%" >
+    <img src="../assets/img/octojekyll.png" style="width:50%"/>
+    <h1>اولین وب سایت شخصی من ک با گیت هاب  و جکیل درستش کردم</h1>
 </div>
