--- a/works/index.html
+++ b/works/index.html
@@ -2,7 +2,7 @@
 layout: blog
 title:وبلاگ| فاطمه زنگوئی
 ---
-<div style="padding:4%" >
+<div style="padding:4%;text-align: center" >
     <img src="../assets/img/octojekyll.png" style="width:50%"/>
     <h1>اولین وب سایت شخصی من ک با گیت هاب  و جکیل درستش کردم</h1>
 </div>
