--- a/works/index.html
+++ b/works/index.html
@@ -4,5 +4,4 @@ title:وبلاگ| فاطمه زنگوئی
 ---
 <div style="padding:4%;text-align: center" >
     <img src="../assets/img/octojekyll.png" style="width:50%"/>
-<h2>این سایت اولین سایت شخصی هست ک با github and jekyll  درستش کردم </h2>
-</div>
+<h2>این وب سایت رو من با گیت هاب و جکیل درست کردم</h2></div>
