--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ layout: default
       <h2>سلام</h2>
       <h4> خوش آمدید</h4>
       <h6>
-        <a href="/blog">وبلاگ</a> - 
+        <a href="/blog">وب سایت</a> -
         <a href="https://github.com/{{ site.github }}">گیت هاب</a>
       </h6>
 </div>
